fixing spacing and responsivness of image-text-numbers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,11 +484,14 @@ video {
 .-bottom-14 {
   bottom: -3.5rem;
 }
+.-bottom-4 {
+  bottom: -1rem;
+}
 .-left-\[30px\] {
   left: -30px;
 }
-.-right-\[30px\] {
-  right: -30px;
+.-right-\[15px\] {
+  right: -15px;
 }
 .left-3 {
   left: 0.75rem;
@@ -538,11 +541,11 @@ video {
 .m-12 {
   margin: 3rem;
 }
-.m-16 {
-  margin: 4rem;
-}
 .m-8 {
   margin: 2rem;
+}
+.m-2 {
+  margin: 0.5rem;
 }
 .mx-0 {
   margin-left: 0px;
@@ -626,8 +629,20 @@ video {
 .max-w-\[16rem\] {
   max-width: 16rem;
 }
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+.shrink-0 {
+  flex-shrink: 0;
+}
 .grow {
   flex-grow: 1;
+}
+.basis-1\/3 {
+  flex-basis: 33.333333%;
+}
+.basis-\[30\%\] {
+  flex-basis: 30%;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -652,6 +667,9 @@ video {
 }
 .flex-col {
   flex-direction: column;
+}
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 .place-content-center {
   place-content: center;
@@ -696,6 +714,9 @@ video {
 .self-center {
   align-self: center;
 }
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -714,13 +735,6 @@ video {
 }
 .border-b {
   border-bottom-width: 1px;
-}
-.border-\[\#0F2343\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(15 35 67 / var(--tw-border-opacity));
-}
-.border-\[var\(--featured-color\)\] {
-  border-color: var(--featured-color);
 }
 .border-\[var\(--text-color\)\] {
   border-color: var(--text-color);
@@ -766,6 +780,10 @@ video {
 }
 .p-8 {
   padding: 2rem;
+}
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 .px-16 {
   padding-left: 4rem;
@@ -826,9 +844,6 @@ video {
 .pb-10 {
   padding-bottom: 2.5rem;
 }
-.pb-16 {
-  padding-bottom: 4rem;
-}
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -846,9 +861,6 @@ video {
 }
 .pb-8 {
   padding-bottom: 2rem;
-}
-.pb-\[66\%\] {
-  padding-bottom: 66%;
 }
 .pl-12 {
   padding-left: 3rem;
@@ -885,6 +897,18 @@ video {
 }
 .pt-6 {
   padding-top: 1.5rem;
+}
+.pt-12 {
+  padding-top: 3rem;
+}
+.pr-16 {
+  padding-right: 4rem;
+}
+.pt-20 {
+  padding-top: 5rem;
+}
+.pb-12 {
+  padding-bottom: 3rem;
 }
 .text-left {
   text-align: left;
@@ -1147,6 +1171,7 @@ h3 strong {
 
 /* Button Styles */
 [class*='button'] {
+    display: inline-block;
     border-radius: 0.5rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -1362,6 +1387,15 @@ h3 strong {
 }
 
 @media (min-width: 768px) {
+  .md\:-bottom-14 {
+    bottom: -3.5rem;
+  }
+  .md\:-right-\[30px\] {
+    right: -30px;
+  }
+  .md\:-bottom-10 {
+    bottom: -2.5rem;
+  }
   .md\:order-first {
     order: -9999;
   }
@@ -1374,8 +1408,20 @@ h3 strong {
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
+  .md\:m-16 {
+    margin: 4rem;
+  }
   .md\:m-36 {
     margin: 9rem;
+  }
+  .md\:m-8 {
+    margin: 2rem;
+  }
+  .md\:mr-12 {
+    margin-right: 3rem;
+  }
+  .md\:-mr-12 {
+    margin-right: -3rem;
   }
   .md\:flex {
     display: flex;
@@ -1409,6 +1455,15 @@ h3 strong {
   }
   .md\:pt-0 {
     padding-top: 0px;
+  }
+  .md\:pr-16 {
+    padding-right: 4rem;
+  }
+  .md\:pl-0 {
+    padding-left: 0px;
+  }
+  .md\:pl-16 {
+    padding-left: 4rem;
   }
 }
 
